--- a/views/pending-registration.templ
+++ b/views/pending-registration.templ
@@ -36,7 +36,7 @@ templ RejectedRegistrationPage() {
 
 templ registrationPage(title string) {
 	@html("Woody Wood Gate - " + title) {
-		@components.AuthForm(title, components.FormModel{}) {
+		@components.Form(title, components.FormModel{}, "POST") {
 			{ children... }
 		}
 		@components.AuthFooter() {
