--- a/views/reset-password.templ
+++ b/views/reset-password.templ
@@ -25,7 +25,7 @@ templ PasswordForgottenPage(resetError string) {
 }
 
 templ PasswordForgottenForm(model PasswordForgottenModel) {
-	@c.AuthForm("Mot de passe oublié", model.FormModel) {
+	@c.Form("Mot de passe oublié", model.FormModel, "POST") {
 		<p>
 			Veuillez fournir l'adresse email associée à votre compte.
 		</p>
@@ -49,7 +49,7 @@ templ ResetPasswordPage() {
 }
 
 templ ResetPasswordForm(model c.FormModel) {
-	@c.AuthForm("Réinitialisation du mot de passe", model) {
+	@c.Form("Réinitialisation du mot de passe", model, "POST") {
 		@c.Field(c.FieldModel{FormModel: model,
 			Label: "Nouveau mot de passe", Name: "Password", Required: true, Type: "password",
 		})
