--- a/views/user.templ
+++ b/views/user.templ
@@ -1,28 +1,31 @@
 package views
 
 import (
-	c "woody-wood-portail/cmd/ctx/auth"
+	"woody-wood-portail/cmd/ctx/auth"
 	components "woody-wood-portail/views/components"
 )
 
 templ UserPage(isOnline bool) {
 	@html("Woody Wood Gate") {
-		<div class="m-auto mt-4 w-80 flex flex-col items-center">
-			<h1 class="m-4 text-center text-2xl">Woody Wood Gate</h1>
-			<p class="text-center">Bienvenu { c.GetUserFromTempl(ctx).FullName }</p>
+		@components.Card("Woody Wood Gate") {
 			<p>
 				if isOnline {
-					🟢 Le portail est actuellement <span class="text-green-500">connecté</span>
+					🟢 Le portail est <span class="text-green-500">connecté</span>
 				} else {
-					🔴 Le portail est actuellement <span class="text-red-500">déconnecté</span>
+					🔴 Le portail est <span class="text-red-500">déconnecté</span>
 				}
 			</p>
 			@components.Button(templ.Attributes{"hx-get": "/user/open", "class": "my-8", "disabled": !isOnline}) {
 				Ouvrir le portail
 			}
-			<p>
-				<a href="/logout" class="text-blue-500 mt-10">Se déconnecter</a>
-			</p>
-		</div>
+		}
+		@components.AuthFooter() {
+			<a href="/logout" class="text-blue-500 mt-10">Se déconnecter</a>
+		}
+		if auth.GetUserFromTempl(ctx).Role == "admin" {
+			@components.AuthFooter() {
+				<a href="/admin" class="text-blue-500 mt-10">Panneau d'administration</a>
+			}
+		}
 	}
 }
