:adhesive_bandage: fix invitation code not auto-completed on QRCode scan

--- a/views/register.templ
+++ b/views/register.templ
@@ -17,7 +17,7 @@ type RegisterFormValues struct {
 templ RegisterPage(code string) {
 	@html("Woody Wood Gate - Inscription") {
 		@RegisterForm(c.FormModel{
-			Values: url.Values{"code": []string{code}},
+			Values: url.Values{"InvitationCode": []string{code}},
 		})
 		@c.AuthFooter() {
 			Vous avez déjà un compte ?
