--- a/views/components/form-components.templ
+++ b/views/components/form-components.templ
@@ -150,7 +150,7 @@ templ Form(title string, model FormModel, method string, attrs ...templ.Attribut
 
 templ Card(title string) {
 	<div
-		class="card w-80 border border-gray-50 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2 print:shadow-none"
+		class="card w-80 border border-gray-50 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2 print:shadow-none print:border-none"
 	>
 		<h1 class="text-2xl mb-4 text-center">
 			{ title }
