--- a/views/components/alerts.templ
+++ b/views/components/alerts.templ
@@ -30,6 +30,7 @@ func resultCSS(kind string) string {
     case "success": 
       return "border border-green-500 bg-green-100 text-center"
     case "error": return "border border-red-500 bg-red-100"
+    case "warning": return "border border-orange-500 bg-orange-100"
     default: panic("unknown kind:" + kind)
 	}
 }
