--- a/views/admin.templ
+++ b/views/admin.templ
@@ -24,7 +24,7 @@ type AdminUsersPageModel struct {
 templ adminPage() {
 	@html("Woody Wood Gate - Admin") {
 		<div class="h-dvh flex flex-col">
-			<div class="overflow-scroll p-2 flex-1">
+			<div class="overflow-auto p-2 flex-1">
 				{ children... }
 			</div>
 			@menu()
