--- a/views/html-layout.templ
+++ b/views/html-layout.templ
@@ -12,8 +12,8 @@ templ html(title string) {
 			<link href="/static/css/tailwind.css" rel="stylesheet"/>
 		</head>
 		<body>
-			<p class="absolute top-2 right-2 text-sm text-blue-300 print:hidden">
-				<a href="mailto:v.cocaud+wwg@gmail.com">Besoin d'aide ?</a>
+			<p class="absolute top-2 right-4 text-sm text-blue-300 print:hidden">
+				<a href="mailto:v.cocaud+wwg@gmail.com">🛟 Besoin d'aide ?</a>
 			</p>
 			{ children... }
 			<script src="/static/js/htmx.min.js"></script>
